<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/calendar_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_normal" >

    <ImageView
        android:id="@id/calendar_background_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/desc"
        android:scaleType="fitEnd"
        android:src="@drawable/background_calendar" />

    <LinearLayout
        android:id="@id/calendar_view_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:background="@color/background_normal" >

            <TextView
                android:id="@id/calendar_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/temp26"
                android:textColor="@color/text_title"
                android:textSize="18.0sp" />

            <Button
                android:id="@id/calendar_prev_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/calendar_title_text"
                android:background="#00000000"
                android:drawableRight="@drawable/arrow2_left"
                android:paddingRight="10.0dip" />

            <Button
                android:id="@id/calendar_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/calendar_today_button"
                android:layout_toRightOf="@id/calendar_title_text"
                android:background="#00000000"
                android:drawableLeft="@drawable/arrow2_right"
                android:paddingLeft="10.0dip" />

            <Button
                android:id="@id/calendar_today_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:paddingRight="20.0dip"
                android:text="@string/today"
                android:textColor="@color/text_title"
                android:textSize="20.0sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_normal"
            android:orientation="horizontal"
            android:paddingBottom="5.0dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/week_7"
                android:textColor="@color/text_title"
                android:textSize="12.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/week_1"
                android:textColor="@color/text_gray"
                android:textSize="12.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/week_2"
                android:textColor="@color/text_gray"
                android:textSize="12.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/week_3"
                android:textColor="@color/text_gray"
                android:textSize="12.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/week_4"
                android:textColor="@color/text_gray"
                android:textSize="12.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/week_5"
                android:textColor="@color/text_gray"
                android:textSize="12.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/week_6"
                android:textColor="@color/text_title"
                android:textSize="12.0sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@id/calendar_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_normal" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/line_normal" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_normal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@color/background_normal"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="5.0dip"
                android:paddingLeft="10.0dip"
                android:paddingTop="5.0dip" >

                <TextView
                    android:id="@id/calendar_selected_date_day_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp27"
                    android:textColor="@color/text_title"
                    android:textSize="30.0sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@id/calendar_selected_date_full_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp28"
                        android:textSize="12.0sp" />

                    <TextView
                        android:id="@id/calendar_selected_date_lunar_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp29"
                        android:textSize="12.0sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="5.0dip"
                android:paddingRight="10.0dip"
                android:paddingTop="5.0dip" >

                <View
                    android:layout_width="0.5dip"
                    android:layout_height="40.0dip"
                    android:background="@color/line_normal" />

                <Button
                    android:id="@id/calendar_create_event_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/button_add2"
                    android:drawablePadding="5.0dip"
                    android:text="@string/calendar_create_event_button"
                    android:textColor="@color/text_title"
                    android:textSize="14.0sp" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/line_normal" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:id="@id/calendar_event_list_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@id/loading"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="#cc333333"
        android:gravity="center"
        android:visibility="gone" >

        <ProgressBar
            android:id="@id/progress_bar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_centerVertical="true"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:layout_toRightOf="@id/progress_bar"
            android:text="@string/loading"
            android:textColor="#ffffffff" />
    </RelativeLayout>

</RelativeLayout>