<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_normal" >

    <ScrollView
        android:id="@id/login_main_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/login_other_login_layout" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <ImageView
                android:id="@id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50.0dip"
                android:contentDescription="@string/desc"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />

            <Button
                android:id="@id/login_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="20.0dip"
                android:background="@drawable/close" />

            <LinearLayout
                android:id="@id/login_form_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginTop="40.0dip"
                android:orientation="vertical" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:background="@color/line_normal" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingLeft="15.0dip"
                        android:text="@string/login_mobile_text"
                        android:textSize="16.0sp" />

                    <EditText
                        android:id="@id/login_mobile_input"
                        android:layout_width="fill_parent"
                        android:layout_height="44.0dip"
                        android:background="#00000000"
                        android:hint="@string/login_mobile_hint"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="50"
                        android:paddingRight="15.0dip"
                        android:singleLine="true"
                        android:textColorHint="@color/text_hint"
                        android:textSize="16.0sp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:background="@color/line_normal" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@id/login_password_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="15.0dip"
                        android:text="@string/login_password_text"
                        android:textSize="16.0sp" />

                    <EditText
                        android:id="@id/login_password_input"
                        android:layout_width="fill_parent"
                        android:layout_height="44.0dip"
                        android:layout_toLeftOf="@id/login_forget_password_button"
                        android:layout_toRightOf="@id/login_password_text"
                        android:background="#00000000"
                        android:hint="@string/login_password_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:paddingRight="15.0dip"
                        android:singleLine="true"
                        android:textColorHint="@color/text_hint"
                        android:textSize="16.0sp" />

                    <Button
                        android:id="@id/login_forget_password_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="#00000000"
                        android:paddingLeft="5.0dip"
                        android:paddingRight="5.0dip"
                        android:text="@string/login_button_forget_password"
                        android:textSize="18.0sp" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:background="@color/line_normal" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@id/login_register_button"
                        android:layout_width="fill_parent"
                        android:layout_height="44.0dip"
                        android:layout_margin="20.0dip"
                        android:layout_weight="1.0"
                        android:background="@drawable/button_normal"
                        android:text="@string/login_button_register"
                        android:textColor="#ffffffff"
                        android:textSize="18.0sp" />

                    <Button
                        android:id="@id/login_submit_button"
                        android:layout_width="fill_parent"
                        android:layout_height="44.0dip"
                        android:layout_margin="20.0dip"
                        android:layout_weight="1.0"
                        android:background="@drawable/button_gray"
                        android:text="@string/login_button_submit"
                        android:textColor="#ffffffff"
                        android:textSize="18.0sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@id/login_other_login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:layout_centerInParent="true"
                android:background="@color/line_normal" />

            <TextView
                android:id="@id/login_other_login_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/background_normal"
                android:paddingLeft="20.0dip"
                android:paddingRight="20.0dip"
                android:text="@string/login_register_label"
                android:textColor="#ffcccccc"
                android:textSize="16.0sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40.0dip"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="40.0dip"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@id/login_wechat_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5.0dip"
                    android:background="@drawable/logo_wechat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_login_wechat"
                    android:textSize="14.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40.0dip"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="40.0dip"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@id/login_weibo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5.0dip"
                    android:background="@drawable/logo_weibo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_login_weibo"
                    android:textSize="14.0sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@id/loading"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="#cc333333"
        android:gravity="center"
        android:visibility="gone" >

        <ProgressBar
            android:id="@id/progress_bar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_centerVertical="true"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:layout_toRightOf="@id/progress_bar"
            android:text="@string/loading"
            android:textColor="#ffffffff" />
    </RelativeLayout>

</RelativeLayout>